[gd_scene load_steps=7 format=3 uid="uid://81psg7ptirra"]

[ext_resource type="Script" uid="uid://bvbupe0ngrlle" path="res://scenes/room/popups/edit_popup.gd" id="1_1e46y"]
[ext_resource type="Texture2D" uid="uid://2j1lixeg62or" path="res://shared/images/stripes.png" id="1_qs1y4"]
[ext_resource type="PackedScene" uid="uid://c0y7xab8g7wps" path="res://shared/scenes/container.tscn" id="2_1e46y"]
[ext_resource type="AudioStream" uid="uid://bdrpodbxf1ukf" path="res://music/Matcha Green Tea.mp3" id="3_54fjg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0jbip"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gmbn6"]

[node name="EditPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1e46y")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
texture_repeat = 2
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1440.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("1_qs1y4")
stretch_mode = 1

[node name="Container" parent="." instance=ExtResource("2_1e46y")]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 390.0
offset_top = 60.0
offset_right = 890.0
offset_bottom = 660.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 15
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "EDIT"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0jbip")

[node name="FloorScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="FloorGridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/FloorScrollContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 6

[node name="FloorTileTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="WallScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="WallGridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/WallScrollContainer"]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 6

[node name="WallTileTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_gmbn6")

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.38
text = "BACK"

[node name="MatchaGreenTea" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_54fjg")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
